--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "axios": "^0.24.0",
     "date-fns": "^2.26.0",
     "framer-motion": "^5.2.1",
-    "node-sass": "^6.0.1",
+    "node-sass": "^7.0.1",
     "normalize.css": "^8.0.1",
     "npm": "^8.1.4",
     "react": "^17.0.2",
@@ -29,7 +29,7 @@
     "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.3.1",
     "react-responsive-modal": "^6.1.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "react-transition-group": "^4.4.2",
     "semantic-ui-react": "^2.0.4",
     "styled-components": "^5.3.3",
